@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods

title Domain Model - US007

'class Platform {
'  -description
'}

class Person {
    name
    taxNumber
    emailAddress
    telephoneNumber
}

class PassportCard {
    passportNumber
}

class Owner {
}

class User {
    name
    emailAddress
    password
}

class Address{
    street
    city
    district
    state
    zipCode
}

class Role {
    id
    description
}
'class Password{
'    password
'}

Person *--left Role
Person *--up Address
Person *--right PassportCard
Person <|--down Owner
Owner -|> User

@enduml